[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repomind"
version = "2.0.0"
description = "智能项目知识图谱生成工具 - 扫描代码仓库，提取实体和关系，生成知识图谱"
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "RepoMind Team", email = "repomind@example.com"}
]
keywords = ["knowledge-graph", "code-analysis", "repository", "cli", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
git = ["gitpython>=3.1.0"]
web = ["fastapi>=0.100.0", "uvicorn>=0.23.0"]
all = ["gitpython>=3.1.0", "fastapi>=0.100.0", "uvicorn>=0.23.0"]

[project.urls]
Homepage = "https://github.com/potoior/repomind-skill"
Repository = "https://github.com/potoior/repomind-skill"
Issues = "https://github.com/potoior/repomind-skill/issues"

[project.scripts]
repomind = "repomind.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["repomind*"]

[tool.setuptools.package-data]
repomind = ["*.md", "*.txt", "*.example"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
